--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,9 +48,11 @@ services:
       - AUTHN_URL=http://authn:3000
       - APP_DOMAINS=localhost
       - SECRET_KEY_BASE
+      - PASSWORD_POLICY_SCORE=0
     depends_on:
       - redis-authn
       - db-authn
+    command: sh -c "./authn migrate && ./authn server"
 
   reverseproxy:
     build: ./reverseproxy
