fully replicated compose using terraform

--- a/reverseproxy/nginx.conf
+++ b/reverseproxy/nginx.conf
@@ -30,7 +30,7 @@ http {
         }
 
         location /api/ {
-            proxy_pass         http://backend:8000/;
+            proxy_pass         http://backend-server:7000/;
             proxy_redirect     off;
             proxy_set_header   Host $host;
             proxy_set_header   X-Real-IP $remote_addr;
@@ -39,7 +39,7 @@ http {
         }
 
         location / {
-            proxy_pass         http://web-frontend:3000;
+            proxy_pass         http://web-frontend:4000;
             proxy_redirect     off;
             proxy_set_header   Host $host;
             proxy_set_header   X-Real-IP $remote_addr;
